--- a/examples/ex_01_List_pandas_00.ipynb
+++ b/examples/ex_01_List_pandas_00.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8fbc3cec",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pandas101",
+   "display_name": ".conda",
    "language": "python",
    "name": "python3"
   },
