บทเรียนการจัดการข้อมูลหลายชุด (Multiple Data Sources)

--- a/pandas_basic_use/pd_multi_data_sources_01.ipynb
+++ b/pandas_basic_use/pd_multi_data_sources_01.ipynb
@@ -86,6 +86,57 @@
    "execution_count": null,
    "id": "93b81b5f",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Order_ID Product_Code  Qty\n",
+      "0     J001           P1   10\n",
+      "1     J002           P2    5\n",
+      "2     J003           P1   20 \n",
+      "\n",
+      "  Order_ID Product_Code  Qty\n",
+      "0     F001           P3    8\n",
+      "1     F002           P1   15 \n",
+      "\n",
+      "  Order_ID Product_Code  Qty\n",
+      "0     J001           P1   10\n",
+      "1     J002           P2    5\n",
+      "2     J003           P1   20\n",
+      "3     F001           P3    8\n",
+      "4     F002           P1   15\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1 = pd.read_csv('../datasets/multiple_data/sales_jan.csv')\n",
+    "df2 = pd.read_csv('../datasets/multiple_data/sales_feb.csv')\n",
+    "\n",
+    "# รวมร่างด้วย pd.concat (เอามาต่อท้าย)\n",
+    "all_sales = pd.concat([df1, df2], ignore_index=True)\n",
+    "\n",
+    "print(df1, '\\n')\n",
+    "print(df2, '\\n')\n",
+    "print(all_sales)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc6e1bbb",
+   "metadata": {},
+   "source": [
+    "แบบยาก (Pro Mode: Automate)\n",
+    "สถานการณ์จริง: ถ้าป๋ามีไฟล์ 12 เดือน หรือ 100 ไฟล์ จะมานั่งพิมพ์ชื่อไฟล์ทีละบรรทัดไม่ไหว และป๋าต้องการรู้ด้วยว่า \"ข้อมูลนี้มาจากไฟล์ไหน?\" (Source Identification)\n",
+    "\n",
+    "เราจะใช้ไลบรารี glob มาช่วยกวาดชื่อไฟล์ทั้งหมดในโฟลเดอร์ครับ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5091a89",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
