pd concat data แบบง่ายและแบบ pro

--- a/pandas_basic_use/pd_multi_data_sources_01.ipynb
+++ b/pandas_basic_use/pd_multi_data_sources_01.ipynb
@@ -10,21 +10,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "99fe5845",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "สร้างไฟล์จำลองเสร็จเรียบร้อย\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import glob\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e67d413",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# --- 1. สร้างไพล์ยอดขายรายเดือน (สำหรับโจทย์รวมไฟล์) ---\n",
     "# เดือนมกราคม\n",
@@ -134,11 +136,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "b5091a89",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- รวมแบบ Pro (รู้ที่มา) ---\n",
+      "  Order_ID Product_Code  Qty                              Source_File\n",
+      "0     F001           P3    8  ../datasets/multiple_data\\sales_feb.csv\n",
+      "1     F002           P1   15  ../datasets/multiple_data\\sales_feb.csv\n",
+      "2     J001           P1   10  ../datasets/multiple_data\\sales_jan.csv\n",
+      "3     J002           P2    5  ../datasets/multiple_data\\sales_jan.csv\n",
+      "4     J003           P1   20  ../datasets/multiple_data\\sales_jan.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. หาไฟล์ทั้งหมดที่ขึ้นต้นด้วย sales_ และลงท้ายด้วย .csv\n",
+    "\n",
+    "file_list = glob.glob('../datasets/multiple_data/sales_*.csv')\n",
+    "\n",
+    "all_data = [] # สร้าง list ว่างไว้รอเก็บ\n",
+    "for filename in file_list:\n",
+    "    df = pd.read_csv(filename)\n",
+    "    df['Source_File'] = filename        # เทคนิคสำคัญ * สร้างคอลัมน์บอกที่มา\n",
+    "    all_data.append(df)\n",
+    "\n",
+    "# รวมครั้งเดียว\n",
+    "final_df = pd.concat(all_data, ignore_index=True)\n",
+    "\n",
+    "print('--- รวมแบบ Pro (รู้ที่มา) ---')\n",
+    "final_df.to_excel('../output/concat_sales.xlsx')\n",
+    "print(final_df.head())"
+   ]
   }
  ],
  "metadata": {
