pd merged ง่ายและยาก merge_asof ง่ายและยาก

--- a/pandas_basic_use/pd_multi_data_sources_01.ipynb
+++ b/pandas_basic_use/pd_multi_data_sources_01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "99fe5845",
    "metadata": {},
    "outputs": [],
@@ -22,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4e67d413",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "สร้างไฟล์จำลองเสร็จเรียบร้อย\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# --- 1. สร้างไพล์ยอดขายรายเดือน (สำหรับโจทย์รวมไฟล์) ---\n",
@@ -85,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "93b81b5f",
    "metadata": {},
    "outputs": [
@@ -136,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "b5091a89",
    "metadata": {},
    "outputs": [
@@ -170,13 +178,431 @@
     "\n",
     "print('--- รวมแบบ Pro (รู้ที่มา) ---')\n",
     "final_df.to_excel('../output/concat_sales.xlsx')\n",
-    "print(final_df.head())"
+    "print(final_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6a67b2f",
+   "metadata": {},
+   "source": [
+    "2. จำลอง VLOOKUP (การดึงข้อมูลข้ามตาราง)\n",
+    "โจทย์: ในตารางยอดขายมีแค่รหัสสินค้า (Product_Code) ป๋าอยากได้ชื่อสินค้าและราคาจากไฟล์ Master มาแปะ\n",
+    "\n",
+    "แบบง่าย (Easy Mode: ชื่อคอลัมน์เหมือนกัน)\n",
+    "ใน Pandas เราใช้คำสั่ง merge ครับ (SQL เรียกว่า Join)\n",
+    "\n",
+    "สมมติชื่อคอลัมน์ตรงกันเป๊ะๆ มันจะง่ายมาก"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a740707d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>P_Code</th>\n",
+       "      <th>P_Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>P1</td>\n",
+       "      <td>ปากกา</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P2</td>\n",
+       "      <td>ดินสอ</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>P3</td>\n",
+       "      <td>ยางลบ</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>P4</td>\n",
+       "      <td>ไม้บรรทัด</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  P_Code     P_Name  Price\n",
+       "0     P1      ปากกา     10\n",
+       "1     P2      ดินสอ      5\n",
+       "2     P3      ยางลบ      3\n",
+       "3     P4  ไม้บรรทัด     12"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# โค๊ดจำลอง กรณีเปลี่ยนชื่อให้เหมือนกันก่อน)\n",
+    "sales = final_df.copy()\n",
+    "master = pd.read_csv('../datasets/multiple_data/product_master.csv')\n",
+    "\n",
+    "# VLOOKUP แบบ Excel Match (how='left' คือยึดตารางขายเป็นหลัก)\n",
+    "# หมายเหตุ: ในไฟล์ตัวอย่าง ชื่อคอลัมน์ไม่ตรงกัน (Product_Code vs P_Code)\n",
+    "# ถ้าเหมือนกันจะใช้ on='Product_Code' ได้เลย\n",
+    "master\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c02375e",
+   "metadata": {},
+   "source": [
+    "แบบยาก (Real World Mode: ชื่อคอลัมน์ไม่เหมือน + Keys ซับซ้อน)\n",
+    "สถานการณ์จริง: ตารางยอดขายใช้ชื่อ Product_Code แต่ตาราง Master ใช้ชื่อ P_Code (คนละชื่อกัน) และเราอยากดึงข้อมูลมาแค่บางส่วน"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0798091b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- ผลลัพธ์ VLOOKUP (Merge) ---\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order_ID</th>\n",
+       "      <th>Product_Code</th>\n",
+       "      <th>Qty</th>\n",
+       "      <th>P_Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>F001</td>\n",
+       "      <td>P3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>ยางลบ</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>F002</td>\n",
+       "      <td>P1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>ปากกา</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>J001</td>\n",
+       "      <td>P1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>ปากกา</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>J002</td>\n",
+       "      <td>P2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ดินสอ</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>J003</td>\n",
+       "      <td>P1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>ปากกา</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order_ID Product_Code  Qty P_Name  Price\n",
+       "0     F001           P3    8  ยางลบ      3\n",
+       "1     F002           P1   15  ปากกา     10\n",
+       "2     J001           P1   10  ปากกา     10\n",
+       "3     J002           P2    5  ดินสอ      5\n",
+       "4     J003           P1   20  ปากกา     10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "master = pd.read_csv('../datasets/multiple_data/product_master.csv')\n",
+    "\n",
+    "# ใช้ left_on และ right_on เพื่อบอกคู่ที่จับคู่กัน\n",
+    "merged_df = pd.merge(\n",
+    "    sales,\n",
+    "    master[['P_Code', 'P_Name', 'Price']],\n",
+    "    left_on='Product_Code',\n",
+    "    right_on='P_Code',\n",
+    "    how='left'\n",
+    ")\n",
+    "\n",
+    "# ลบคอลัมน์ที่เกินมาทึ้ง (P_Code จะติดมาด้วย หลังจาก merged)\n",
+    "merged_df = merged_df.drop(columns=['P_Code','Source_File'])\n",
+    "\n",
+    "print('--- ผลลัพธ์ VLOOKUP (Merge) ---')\n",
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe1fccc5",
+   "metadata": {},
+   "source": [
+    "3. จำลอง XLOOKUP (การค้นหาแบบยืดหยุ่น / Approximate Match)\n",
+    "XLOOKUP ใน Excel เก่งกว่า VLOOKUP ตรงที่มันหาค่า \"ใกล้เคียงที่สุด\" ได้ (เช่น การตัดเกรด หรือคิดค่าส่งตามช่วงน้ำหนัก)\n",
+    "\n",
+    "แบบง่าย (Easy Mode: XLOOKUP หาค่า + จัดการค่าว่าง)\n",
+    "XLOOKUP มักใช้จัดการกรณี \"หาไม่เจอ\" ให้ใส่ค่า Default ใน Pandas เราทำหลัง Merge เสร็จครับ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "406d47ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order_ID</th>\n",
+       "      <th>Product_Code</th>\n",
+       "      <th>Qty</th>\n",
+       "      <th>P_Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>F001</td>\n",
+       "      <td>P3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>ยางลบ</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>F002</td>\n",
+       "      <td>P1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>ปากกา</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>J001</td>\n",
+       "      <td>P1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>ปากกา</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>J002</td>\n",
+       "      <td>P2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ดินสอ</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>J003</td>\n",
+       "      <td>P1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>ปากกา</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order_ID Product_Code  Qty P_Name  Price\n",
+       "0     F001           P3    8  ยางลบ      3\n",
+       "1     F002           P1   15  ปากกา     10\n",
+       "2     J001           P1   10  ปากกา     10\n",
+       "3     J002           P2    5  ดินสอ      5\n",
+       "4     J003           P1   20  ปากกา     10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# สมมติมียอดขายสินค้า P99 (ไม่มีใน Master)\n",
+    "# พอ Merge เสร็จ ค่าจะเป็น NaN (Not a Number)\n",
+    "merged_df['P_Name'] = merged_df['P_Name'].fillna('ไม่ระบบชื่อสินค้า')\n",
+    "merged_df\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d673788",
+   "metadata": {},
+   "source": [
+    "แบบยาก (Pro Mode: Approximate Match / merge_asof) อันนี้ทีเด็ด\n",
+    "สถานการณ์จริง: ป๋ามีพัสดุหนัก 2.5 กิโล ในตารางเรทราคามีแค่ 1, 5, 10 กิโล ไม่มีเลข 2.5 เป๊ะๆ\n",
+    "\n",
+    "VLOOKUP/Merge ธรรมดาจะหาไม่เจอ (ตาย)\n",
+    "\n",
+    "XLOOKUP (Approximate) จะหาตัวที่ใกล้เคียงให้\n",
+    "\n",
+    "ใน Pandas ใช้ pd.merge_asof (ต้องเรียงข้อมูลก่อนเสมอ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "abbbed1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- ผลลัพธ์ XLOOKUP (Approximate Match) ---\n",
+      "  Parcel_ID  Weight  Max_Weight  Shipping_Cost\n",
+      "0         A     2.5         5.0             50\n",
+      "1         B     9.8        10.0             80\n",
+      "float64\n",
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# สมมติมีข้อมูลพัสดุที่ต้องการคิดเงิน\n",
+    "parcels = pd.DataFrame({'Parcel_ID': ['A', 'B'], 'Weight': [2.5, 9.8]})\n",
+    "rates = pd.read_csv('../datasets/multiple_data/shipping_Cost.csv')\n",
+    "rates['Max_Weight'] = rates['Max_Weight'].astype(float)\n",
+    "\n",
+    "# 1. กฎเหล็ก: ข้อมูลต้องเรียงลำดับ (Sort) ก่อนเสมอ ไม่งั้นพัง\n",
+    "parcels = parcels.sort_values('Weight')\n",
+    "rates = rates.sort_values('Max_Weight')\n",
+    "\n",
+    "# 2. ใช้ merge_asof (direction='forward' คือหาค่าถัดไปที่ครอบคลุมน้ำหนักเรา)\n",
+    "# เช่น หนัก 2.5 -> ไปตกที่เรท Max_Weight 5.0\n",
+    "\n",
+    "cost_df = pd.merge_asof(\n",
+    "    parcels,\n",
+    "    rates,\n",
+    "    left_on='Weight',\n",
+    "    right_on='Max_Weight',\n",
+    "    direction='forward' # forward = หาค่าที่มากกว่าหรือเท่ากับตัวมันที่ใกล้ที่สุด\n",
+    ")\n",
+    "\n",
+    "print(\"--- ผลลัพธ์ XLOOKUP (Approximate Match) ---\")\n",
+    "print(cost_df)\n",
+    "print(parcels['Weight'].dtype)     # ดูว่าฝั่งซ้ายเป็นอะไร\n",
+    "print(rates['Max_Weight'].dtype)   # ดูว่าฝั่งขวาเป็นอะไร"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9412699",
+   "metadata": {},
+   "source": [
+    "ผลลัพธ์: พัสดุหนัก 2.5 จะไปจับคู่กับ Max_Weight 5 ได้ค่าส่ง 50 บาท (ถูกต้องตามเรทการขนส่ง)\n",
+    "\n",
+    "สรุปเทคนิควันนี้:\n",
+    "\n",
+    "รวมไฟล์: ใช้ glob วนลูป + concat (งานซ้ำๆ เสร็จในวิเดียว)\n",
+    "\n",
+    "VLOOKUP: ใช้ merge ระบุ left_on/right_on เมื่อชื่อคอลัมน์ไม่ตรงกัน\n",
+    "\n",
+    "XLOOKUP (ช่วงข้อมูล): ใช้ merge_asof สำหรับข้อมูลที่เป็น Range (ราคา, เวลา, น้ำหนัก)\n",
+    "\n",
+    "ป๋าลองก๊อปไปรันดูนะครับ ติดตรงไหนถามจุกเงินได้เลย! บทต่อไปเราจะไปเรื่อง \"การจัดการข้อมูลวันที่และเวลา (Time Series)\" หรือ \"ทำ Pivot Table ขั้นสูง\" ดีครับ?"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".conda",
+   "display_name": "pandas101",
    "language": "python",
    "name": "python3"
   },
