ฝึกโจทย์ pd basic 3/10 ข้อ ยากขึ้น

--- a/pandas_basic_use/Mini-Challenge/ex_pd_07.ipynb
+++ b/pandas_basic_use/Mini-Challenge/ex_pd_07.ipynb
@@ -1020,23 +1020,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 230,
    "id": "56891209",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "RangeIndex: 7 entries, 0 to 6\n",
-      "Series name: RAM_Size\n",
-      "Non-Null Count  Dtype\n",
-      "--------------  -----\n",
-      "7 non-null      int64\n",
-      "dtypes: int64(1)\n",
-      "memory usage: 188.0 bytes\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0    16\n",
+       "2     8\n",
+       "3    16\n",
+       "4    32\n",
+       "5     2\n",
+       "6    16\n",
+       "Name: RAM_Size, dtype: object"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1053,7 +1055,7 @@
     "\n",
     "df_inv['RAM_Size'] = df_inv['RAM_Size'].apply(convert_ram)\n",
     "\n",
-    "df_inv['RAM_Size'].info()"
+    "df_inv['RAM_Size']"
    ]
   },
   {
@@ -1789,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "id": "6277d924",
    "metadata": {},
    "outputs": [
@@ -2246,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "id": "55589b87",
    "metadata": {},
    "outputs": [
