ฝึกโจทย์ pd basic 6/6 ข้อ ยากขึ้น

--- a/pandas_basic_use/Mini-Challenge/ex_pd_08.ipynb
+++ b/pandas_basic_use/Mini-Challenge/ex_pd_08.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "c1975c84",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "73a7f9dd",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "5   TH-222  MICROSOFT  16384MB    ฿42000   2026.01.10"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "21436093",
    "metadata": {},
    "outputs": [
@@ -202,17 +202,229 @@
    "metadata": {},
    "source": [
     "\n",
-    "ล้างราคา (Price_Tag): ลบเครื่องหมาย ฿, $, และ , ออกให้หมด แล้วแปลงเป็นตัวเลข floatจัดการวันที่ (Receive_Date): ทำให้เป็นรูปแบบปี-เดือน-วัน (YYYY-MM-DD) ให้เหมือนกันทั้งหมด\n"
+    "ล้างราคา (Price_Tag): ลบเครื่องหมาย ฿, $, และ , ออกให้หมด "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "da247295",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_4176\\1769838033.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_store['Price_Tag'] = df_store['Price_Tag'].replace(r'[^0-9.]', '', regex=True).astype(float)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S_Number</th>\n",
+       "      <th>Vender</th>\n",
+       "      <th>Spec_RAM</th>\n",
+       "      <th>Price_Tag</th>\n",
+       "      <th>Receive_Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TH-888</td>\n",
+       "      <td>ASUS</td>\n",
+       "      <td>8</td>\n",
+       "      <td>35000.0</td>\n",
+       "      <td>2025.12.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TH-999</td>\n",
+       "      <td>APPLE</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>05-01-2026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TH-111</td>\n",
+       "      <td>APPLE</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28500.0</td>\n",
+       "      <td>2025.11.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TH-222</td>\n",
+       "      <td>MICROSOFT</td>\n",
+       "      <td>16</td>\n",
+       "      <td>42000.0</td>\n",
+       "      <td>10/01/2026</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  S_Number     Vender  Spec_RAM  Price_Tag Receive_Date\n",
+       "0   TH-888       ASUS         8    35000.0   2025.12.30\n",
+       "2   TH-999      APPLE        16     1200.0   05-01-2026\n",
+       "3   TH-111      APPLE         4    28500.0   2025.11.15\n",
+       "4   TH-222  MICROSOFT        16    42000.0   10/01/2026"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_store['Price_Tag'] = df_store['Price_Tag']"
+    "df_store['Price_Tag'] = df_store['Price_Tag'].replace(r'[^0-9.]', '', regex=True).astype(float)\n",
+    "df_store"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76f4f049",
+   "metadata": {},
+   "source": [
+    "แล้วแปลงเป็นตัวเลข floatจัดการวันที่ (Receive_Date): ทำให้เป็นรูปแบบปี-เดือน-วัน (YYYY-MM-DD) ให้เหมือนกันทั้งหมด\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e9a8686a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_4176\\2175302596.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_store['Receive_Date'] = pd.to_datetime(\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_4176\\2175302596.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_store['Receive_Date'] = df_store['Receive_Date'].dt.strftime('%Y-%m-%d')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S_Number</th>\n",
+       "      <th>Vender</th>\n",
+       "      <th>Spec_RAM</th>\n",
+       "      <th>Price_Tag</th>\n",
+       "      <th>Receive_Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TH-888</td>\n",
+       "      <td>ASUS</td>\n",
+       "      <td>8</td>\n",
+       "      <td>35000.0</td>\n",
+       "      <td>2025-12-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TH-999</td>\n",
+       "      <td>APPLE</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>2026-01-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TH-111</td>\n",
+       "      <td>APPLE</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28500.0</td>\n",
+       "      <td>2025-11-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TH-222</td>\n",
+       "      <td>MICROSOFT</td>\n",
+       "      <td>16</td>\n",
+       "      <td>42000.0</td>\n",
+       "      <td>2026-01-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  S_Number     Vender  Spec_RAM  Price_Tag Receive_Date\n",
+       "0   TH-888       ASUS         8    35000.0   2025-12-30\n",
+       "2   TH-999      APPLE        16     1200.0   2026-01-05\n",
+       "3   TH-111      APPLE         4    28500.0   2025-11-15\n",
+       "4   TH-222  MICROSOFT        16    42000.0   2026-01-10"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_store['Receive_Date'] = pd.to_datetime(\n",
+    "    df_store['Receive_Date'],\n",
+    "    dayfirst=True,\n",
+    "    format='mixed',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "df_store['Receive_Date'] = df_store['Receive_Date'].dt.strftime('%Y-%m-%d')\n",
+    "df_store"
    ]
   },
   {
@@ -221,9 +433,137 @@
    "metadata": {},
    "source": [
     "\n",
-    "ลบข้อมูลซ้ำ: ตรวจสอบ S_Number (อย่าลืมทำตัวใหญ่ก่อน) แล้วลบแถวที่ซ้ำออก\n",
+    "ลบข้อมูลซ้ำ: ตรวจสอบ S_Number (อย่าลืมทำตัวใหญ่ก่อน) แล้วลบแถวที่ซ้ำออก\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "926d23ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>S_Number</th>\n",
+       "      <th>Vender</th>\n",
+       "      <th>Spec_RAM</th>\n",
+       "      <th>Price_Tag</th>\n",
+       "      <th>Receive_Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TH-888</td>\n",
+       "      <td>ASUS</td>\n",
+       "      <td>8</td>\n",
+       "      <td>35000.0</td>\n",
+       "      <td>2025.12.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>TH-999</td>\n",
+       "      <td>APPLE</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>05-01-2026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TH-111</td>\n",
+       "      <td>APPLE</td>\n",
+       "      <td>4</td>\n",
+       "      <td>28500.0</td>\n",
+       "      <td>2025.11.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TH-222</td>\n",
+       "      <td>MICROSOFT</td>\n",
+       "      <td>16</td>\n",
+       "      <td>42000.0</td>\n",
+       "      <td>10/01/2026</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  S_Number     Vender  Spec_RAM  Price_Tag Receive_Date\n",
+       "0   TH-888       ASUS         8    35000.0   2025.12.30\n",
+       "2   TH-999      APPLE        16     1200.0   05-01-2026\n",
+       "3   TH-111      APPLE         4    28500.0   2025.11.15\n",
+       "4   TH-222  MICROSOFT        16    42000.0   10/01/2026"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_store['S_Number'] = df_store['S_Number'].str.upper()\n",
+    "df_store = df_store.drop_duplicates(subset=['S_Number'])\n",
+    "df_store"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dde0d87c",
+   "metadata": {},
+   "source": [
     "\n",
-    "สรุปยอด: หาผลรวมราคาแยกตามยี่ห้อ (Vender)\n",
+    "สรุปยอด: หาผลรวมราคาแยกตามยี่ห้อ (Vender)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "af3cfa7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 ยอดรวมยี่ห้อ: APPLE      ราคา: 29,700.00 บาท\n",
+      "2 ยอดรวมยี่ห้อ: ASUS       ราคา: 35,000.00 บาท\n",
+      "3 ยอดรวมยี่ห้อ: MICROSOFT  ราคา: 42,000.00 บาท\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_group = df_store.groupby('Vender')['Price_Tag'].sum()\n",
+    "\n",
+    "for no, vander in enumerate(sum_group.items()) :\n",
+    "    brand, price = vander\n",
+    "    print(f'{no+1} ยอดรวมยี่ห้อ: {brand:<10} ราคา: {price:,.2f} บาท')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02670ea2",
+   "metadata": {},
+   "source": [
     "\n",
     "💡 คำใบ้จากจุกเงิน (ถ้าป๋าติดตรงไหนดูตรงนี้ได้ครับ):\n",
     "ข้อ 2: $16384 / 1024 = 16$ พอดีเป๊ะครับข้อ \n",
@@ -236,7 +576,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".conda",
+   "display_name": "pandas101",
    "language": "python",
    "name": "python3"
   },
