--- a/pd_01.ipynb
+++ b/pd_01.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# สร้าง Object สำหรับจัดการไฟล์ Excel\n",
-    "excel_file = pd.ExcelFile('isp_data.xlsx')"
+    "excel_file = pd.ExcelFile('mock_isp_data.xlsx')"
    ]
   },
   {
@@ -111,7 +111,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pandas101",
    "language": "python",
    "name": "python3"
   },
@@ -125,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
